--- a/index.html
+++ b/index.html
@@ -216,26 +216,26 @@
                             <!--第一组-->
                             <div class="row">
                                 <div class="col">
-                                    <a id="link-url-1" href="https://blog.bywind.xyz/" target="_blank">
+                                    <a id="link-url-1" href="https://v.douyin.com/ihBsoLbt/ 7@5.com" target="_blank">
                                         <div class="link-card cards">
                                             <i id="link-icon-1" class="fa-solid fa-blog"></i>
-                                            <span class="link-name" id="link-name-1">博客</span>
+                                            <span class="link-name" id="link-name-1">只有抖音了</span>
                                         </div>
                                     </a>
                                 </div>
                                 <div class="col 2">
-                                    <a id="link-url-2" href="https://tongji.baidu.com/" target="_blank">
+                                    <a id="link-url-2" href="#" target="_blank">
                                         <div class="link-card cards">
                                             <i id="link-icon-2" class="fa-solid fa-cloud"></i>
-                                            <span class="link-name" id="link-name-2">统计</span>
+                                            <span class="link-name" id="link-name-2">自我小介绍</span>
                                         </div>
                                     </a>
                                 </div>
                                 <div class="col">
-                                    <a id="link-url-3" href="https://blog.bywind.xyz/music/" target="_blank">
+                                    <a id="link-url-3" href="#" target="_blank">
                                         <div class="link-card cards">
                                             <i id="link-icon-3" class="fa-solid fa-music"></i>
-                                            <span class="link-name" id="link-name-3">音乐</span>
+                                            <span class="link-name" id="link-name-3">音乐不能用了</span>
                                         </div>
                                     </a>
                                 </div>
@@ -243,7 +243,7 @@
                             <!--第二组-->
                             <div class="row" style="margin-top: 1.5rem;">
                                 <div class="col">
-                                    <a id="link-url-4" href="https://www.bywind.xyz/" target="_blank">
+                                    <a id="link-url-4" href="#" target="_blank">
                                         <div class="link-card cards">
                                             <i id="link-icon-4" class="fa-solid fa-compass"></i>
                                             <span class="link-name" id="link-name-4">起始页</span>
@@ -251,7 +251,7 @@
                                     </a>
                                 </div>
                                 <div class="col 2">
-                                    <a id="link-url-5" href="https://blog.bywind.xyz/stars/" target="_blank">
+                                    <a id="link-url-5" href="#" target="_blank">
                                         <div class="link-card cards">
                                             <i id="link-icon-5" class="fa-solid fa-book-bookmark"></i>
                                             <span class="link-name" id="link-name-5">网址集</span>
@@ -259,7 +259,7 @@
                                     </a>
                                 </div>
                                 <div class="col">
-                                    <a id="link-url-6" href="https://bywind.xyz/" target="_blank">
+                                    <a id="link-url-6" href="#" target="_blank">
                                         <div class="link-card cards">
                                             <i id="link-icon-6" class="fa-solid fa-flask"></i>
                                             <span class="link-name" id="link-name-6">实验室</span>
