--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                                     </a>
                                 </div>
                                 <div class="col 2">
-                                    <a id="link-url-2" href="#" target="_blank">
+                                    <a id="link-url-2" href="https://github.com/Zhengyici/Hello-Yi/blob/main/img/intor.png?raw=true" target="_blank">
                                         <div class="link-card cards">
                                             <i id="link-icon-2" class="fa-solid fa-cloud"></i>
                                             <span class="link-name" id="link-name-2">自我小介绍</span>
