--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     <div class="main-left">
                         <!--Logo-->
                         <div class="main-img">
-                            <img id="logo-img" src="https://aurora-cdn.wuhobin.top/blog/avatar.jpg" alt="img">
+                            <img id="logo-img" src="https://github.com/Zhengyici/Hello-Yi/blob/main/img/icon/avatar.jpg" alt="img">
                             <div class="img-title">
                                 <span class="img-title-big" id="logo-text-1">CiQing</span>
                                 <span class="img-text" id="logo-text-2">.top</span>
